syntax = "proto3";

package rumgap.v1;

message SearchRequest {
    string keyword = 1;
    repeated string hostnames = 2;
}

message SearchManga {
    int32 manga_id = 1;
    string title = 2;
    string url = 3;
    int64 posted = 4;
    string cover = 5;
    bool is_reading = 6;

}
message SearchReply {
    repeated SearchManga items = 1;
}
